--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table>
         <tr>
-            <td>    <img src="C:\Users\USER\OneDrive - The Hong Kong Polytechnic University\The Complete Web Develop\HTML - Personal Page\photo-modified.png" width="200" alt="">
+            <td>    <img src="photo-modified.png" width="200" alt="">
             </td>
             <td>  
                 <h1>Yan Ka Kit </h1>  
