--- a/contact-me.html
+++ b/contact-me.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Conatact Details</h1>
     <p>My Fictional Address</p>
-    <p>91987561</p>
-    <p>kakityan51@gmail.com</p>
+    <p>12345678</p>
+    <p>testing@gmail.com</p>
     <form class="" action="mailto:testing@gmail.com" method="post" enctype="text/plain">
         <label>Your Name</label>
         <input type="text" name="yourName">
