--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <td>    <img src="photo-modified.png" width="200" alt="">
             </td>
             <td>  
-                <h1>Yan Ka Kit </h1>  
+                <h1>KENNY </h1>  
                 <p><em>Founder and CTO of <strong>The App Brewery</strong></em></p>
                 <p>I am a cs student</p>
             </td>
